# api_foundry

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Notebook.ipynb  Pipfile  analyze_token.py  api_maker.code-workspace  coverage.xml  debug_jwt.py  debug_test.py  debug_token.py  pyproject.toml  readme.md  requirements.txt  requirements.x.txt  setup.sh  setup.zsh  test.yaml  test_batch_standalone.py  test_fixtures.md  test_security_generation.py
.github/: copilot-instructions.md
api_foundry/: __init__.py
dev_playground/: devtools.sh  install_secrets.py  playground_compose.yaml  readme.md
docs/: BATCH_PATH_IMPLEMENTATION.md  VALUE_INJECTION_IMPLEMENTATION.md  property_value_injection.md  soft_deletes.md  walk_through.md
resources/: LearningSQLExample.sql  api-specifitcation.md  api_spec.yaml  chinook_api.yaml
tests/: automation_fixtures.py  conftest.py  infrastructure_fixtures.py  test_adapter.py  test_api.py  test_association_operations.py  test_batch_path_integration.py  test_connection_factory.py  test_custom_operations.py  test_custom_sql.py  test_custom_sql_integration.py  test_fixtures.py  test_gateway_adapter.py  test_gateway_doc.py  test_gateway_spec.py  test_handler.py  test_insert_sql_generator.py  test_metadata_operations.py  test_model_factory.py  test_postgres_container.py  test_query_operations.py  test_schema_objects_fixtures.py  test_secrets_fixture.py  test_spec_handler.py  test_sql_generator.py  test_sql_handler.py  test_sql_insert_handler.py  test_sql_update_handler.py  test_transactional_service.py  (+1 more)
(+105 files in other folders)
