[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "api_maker"
version = "0.1.0"
authors = [
    { name="Daniel Repik", email="danrepik@icloud.com" },
]
dependencies = [
    'pyhumps~=3.8.0',
    'cryptography~=37.0.4',
    'requests~=2.28.2',
    'simplejson~=3.19.1'
]

description = "Rest Builder is a python package that builds RESTful api services from Open API (v3) model data."
requires-python = ">=3.9"
classifiers = [
   "Programming Language :: Python :: 3.9",
   "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/DanRepik/api-maker"
Source = "https://github.com/DanRepik/api-maker"

# [tool.setuptools.packages.find]
# where = ["src/api_maker"]

